# Agentic-Reasoning-Framework

./: requirements.txt
Agentic-Multidomain-Reasoner/: README.md  multidomain-reasoner.ipynb  pyproject.toml
Agentic-Multidomain-Reasoner/src/agent/: context_manager.py  executor.py
Agentic-Multidomain-Reasoner/src/agent/schemas/: executor_action.schema.json  observation.schema.json
Agentic-Multidomain-Reasoner/src/evals/: __init__.py
Agentic-Multidomain-Reasoner/src/inference/: format_output_csv.py  run_batch.py
Agentic-Multidomain-Reasoner/src/skill_cache/: build_index.py  index_store.py  sqlite_store.py
Agentic-Multidomain-Reasoner/src/tools/: __init__.py  choice_selector.py  python_tool.py  retriever_tool.py  z3_tool.py
Agentic-Multidomain-Reasoner/src/verifier/: __init__.py
Agentic-Multidomain-Reasoner/src/verifier/constraints/: parse_numbers.py
src/agent/: __init__.py  llm_client.py  params.py  planner.py
src/agent/schemas/: __init__.py  planner_goals.schema.json  verifier_io.schema.json
src/evals/: compute_macro_f1.py  sanity_checks.py
src/skill_cache/: __init__.py
src/tools/: sympy_tool.py
src/verifier/: verifier.py
src/verifier/constraints/: init.py  parse_options.py
